# factoryops-console

./: README.md
factoryops-console/: Cargo.toml  README.md
factoryops-console/docs/: architecture.md  documentation.md  task.md
factoryops-console/docs/screenshots/: generate_screenshot.py
factoryops-console/src/: app.rs  main.rs  ui.rs
